--- a/src/app/shelter/shelter.page.html
+++ b/src/app/shelter/shelter.page.html
@@ -13,7 +13,7 @@
   <div class="shelter">
     <ion-row>
       <ion-col>
-        <ion-img [src]="shelter?.logo" [alt]="animal?.name"></ion-img>
+        <ion-img [src]="shelter?.logo" [alt]="shelter?.name"></ion-img>
       </ion-col>
     </ion-row>
 
