--- a/src/app/admin/add/add.page.html
+++ b/src/app/admin/add/add.page.html
@@ -13,7 +13,7 @@
 
   <ion-content>
     <img [src]="image" />
-    <ion-list lines="inset">
+    <ion-list lines="inset" inset="true">
       <ion-row class="ion-justify-content-center">
       <ion-col>
         <ion-button class="ion-justify-content-center" expand="block">
