--- a/src/app/admin/edit/edit.page.html
+++ b/src/app/admin/edit/edit.page.html
@@ -18,7 +18,7 @@
   <ion-content>
     <ion-img [src]="image"></ion-img>
     
-    <ion-list lines="inset">
+    <ion-list lines="false" inset="true">
      
       <ion-radio-group formControlName="type">
         <ion-list-header>
