--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -11,7 +11,7 @@
   <div class="animal">
     <ion-row>
       <ion-col>
-        <img src="{{loading ? loader : animal?.image}}" [alt]="animal?.name">
+        <ion-img src="{{loading ? loader : animal?.image}}" [alt]="animal?.name"></ion-img>
       </ion-col>
     </ion-row>
 
