--- a/src/global.scss
+++ b/src/global.scss
@@ -9,7 +9,7 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
-@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700');
+@import url("https://fonts.googleapis.com/css?family=Rubik:300,400,500,700");
 
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
@@ -18,7 +18,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -27,34 +27,41 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-ion-avatar {
+:root {
+  ion-img {
+    /** 
+       * Bug fix for:
+       * https://github.com/ionic-team/ionic/issues/18734
+       */
+    min-height: 1px !important;
+  }
+  ion-avatar {
     width: 100px;
     height: 100px;
-}
+  }
 
-ion-avatar img, 
-.animal img {
+  ion-avatar img,
+  .animal img {
     border-radius: 5px;
+  }
 }
 
 .pre-wrap {
-    white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 ion-note {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 @media (min-width: 1024px) {
-
-.row-animals {
-        ion-col {
-            max-width: 50% !important;
-            flex: 1 0 auto !important;
-            
-        }
+  .row-animals {
+    ion-col {
+      max-width: 50% !important;
+      flex: 1 0 auto !important;
     }
+  }
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
