--- a/src/global.scss
+++ b/src/global.scss
@@ -53,15 +53,12 @@
 ion-note {
   font-size: 1rem;
 }
-@media (min-width: 1024px) {
-  .row-animals {
-    ion-col {
-      max-width: 50% !important;
-      flex: 1 0 auto !important;
-    }
-  }
-}
 
 .text-center {
   text-align: center;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
 }
